@@ -1,3 +1,8 @@
+2008-03-21  Leonardo Valeri Manera <l.valerimanera@gmail.com>
+
+	* data/gnome-commander.ebuild:
+	Updated ebuild file for gentoo systems
+
 2008-03-20  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-key-shortcuts-dialog.cc:
